# crm-bot-professional

./: .env.example  .gitignore  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docs/: DEVELOPMENT.md  QUICK_START.md  ROADMAP.md  SAGE.md  TROUBLESHOOTING.md
src/: main.py
src/api/: main.py
src/api/routers/: clients.py  webhook.py
src/config/: settings.py
src/core/: bot.py  dispatcher.py
src/models/: __init__.py  client.py  order.py  user.py
src/modules/: database.py  states.py
src/modules/handlers/: client_handlers.py  start_handlers.py  stats_handlers.py
