[tool.poetry]
name = "crm-bot"
version = "0.1.0"
description = "Professional CRM Telegram Bot"
authors = ["Your Name <your.email@example.com>"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"